# Ansible-Platforms-Roles

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml
.gitlab/: .gitlab-webide.yml
ansible/: bigbluebutton-install.yml  gitlab-install.yml  hosts  hosts.exemple  install.yml  site.yml  suitecrm-install.yml  taiga-install.yml  test.yml  vars.yml
ansible/roles/bigbluebutton/meta/: main.yml
ansible/roles/docker/defaults/: main.yml
ansible/roles/docker/tasks/: main.yml
ansible/roles/firewall/defaults/: main.yml
ansible/roles/firewall/handlers/: main.yml
ansible/roles/firewall/tasks/: main.yml
ansible/roles/gitlab/defaults/: main.yml
ansible/roles/gitlab/handlers/: main.yml
ansible/roles/gitlab/tasks/: email_config.yml  ldap_config.yml  main.yml
ansible/roles/mysql/defaults/: main.yml
ansible/roles/mysql/handlers/: main.yml
ansible/roles/mysql/tasks/: main.yml
ansible/roles/mysql/tests/: test.yml
ansible/roles/mysql/vars/: main.yml
ansible/roles/nginx/defaults/: main.yml
ansible/roles/nginx/handlers/: main.yml
ansible/roles/nginx/tasks/: main.yml
ansible/roles/nginx/tests/: test.yml
ansible/roles/nginx/vars/: main.yml
ansible/roles/nodejs/defaults/: main.yml
ansible/roles/nodejs/tasks/: main.yml
ansible/roles/penpot/defaults/: main.yml
ansible/roles/penpot/handlers/: main.yml
ansible/roles/penpot/tasks/: main.yml
ansible/roles/php/defaults/: main.yml
ansible/roles/php/handlers/: main.yml
ansible/roles/php/tasks/: main.yml
ansible/roles/redis/tasks/: main.yml
ansible/roles/suitecrm/defaults/: main.yml
(+22 files in other folders)
